syntax = "proto3";

option csharp_namespace = "gRPC_API";

package emails;


// Services

service EmailHandler {
  rpc GetEmails (GetEmailsRequest) returns (GetEmailsResponse);
  
  rpc CreateEmail (CreateEmailRequest) returns (CreateEmailResponse);
}

// Base Types

message EmailInputType {
    string subject = 1;
    string body = 2;
    string sender = 3;
    repeated string receivers = 4;
}

message EmailOutputType {
    int32 id = 1;
    string subject = 2;
    string body = 3;
    string timestamp = 4;
    string sender = 5;
    repeated string receivers = 6;
}

// Complex Types

message GetEmailsRequest { }

message GetEmailsResponse {
    repeated EmailOutputType emails = 1;
}

message CreateEmailRequest {
    EmailInputType email = 1;
}

message CreateEmailResponse { }
